Tweak fixed header behaviour
Make it feel more responsive
Introduce small gap a la Winter mockup between left border
of search and top of screen

--- a/resources/fixedHeader/header.less
+++ b/resources/fixedHeader/header.less
@@ -60,7 +60,7 @@ div.vectorTabs {
 	background: none;
 }
 
-#p-search,
+#p-search .searchButton,
 div.vectorTabs,
 div#content {
 	border-left: 1px solid @content-nav-divider-color;
@@ -73,7 +73,7 @@ div#content {
 }
 
 div#simpleSearch {
-	left: .35em;
+	left: 0;
 	background: none;
 	margin: 0;
 	border: none;
@@ -88,7 +88,7 @@ div#simpleSearch {
 		right: 0;
 		height: 100%;
 		padding: 0;
-		top: 0;
+		top: .3em;
 		width: 50px;
 
 		// FIXME: Kill image tag when upstream to core.
